# gtest-example

./: CMakeLists.txt  README.md
code/c5/1/: CMakeLists.txt
core/: CMakeLists.txt
core/lib/ByteBuffer/: ByteBuffer.cxx  ByteBuffer.h
core/lib/MyFunc/: MyFunc.cxx  MyFunc.h
core/lib/Queue/: MyQueue.cxx  MyQueue.h
core/lib/Soundex/: Soundex.cxx  Soundex.h
core/lib/TestDouble/: Http.h  PlaceDescriptionService.h
resources/: entr.cmd
tests/: ByteBufferTest.cxx  CMakeLists.txt  HttpTestDouble.cxx  MyFuncTest.cxx  MyQueueTest.cxx  SoundexTest.cxx
